--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="navbar">
-        <a class="First" href="#">Walter White</a>
+        <a class="First" href="#">Shivam Dangwal</a>
           <a class="textt" href="contact.html">Contact</a>
           <a class="textt" href="projects.html">Projects</a>
           <a class="textt" href="about.html">About</a>
